syntax = "proto3";

package service.playlist;

import "Types/type_track.proto";
import "Types/type_playlist.proto";
import "google/protobuf/timestamp.proto";

service PlaylistGrpcService {
	rpc Create				(CreateRequest)				returns (CreateResponse);
	rpc CreateFavorite		(CreateFavoriteRequest)		returns (CreateFavoriteResponse);
	rpc GetById				(GetByIdRequest)			returns (GetByIdResponse);
	rpc GetListByAuthorId	(GetListByAuthorIdRequest)	returns (GetListByAuthorIdResponse);
	rpc GetFavorite			(GetFavoriteRequest)		returns (GetFavoriteResponse);
	rpc AddTrack			(AddTrackRequest)			returns (AddTrackResponse);
	rpc Update				(UpdateRequest)				returns (UpdateResponse);
	rpc Delete				(DeleteRequest)				returns (DeleteResponse);
	rpc Search				(SearchRequest)				returns (SearchResponse);
	rpc GetLatestPlaylists	(GetLatestPlaylistsRequest)	returns (GetLatestPlaylistsResponse);
}


message CreateRequest{
	string name = 1;
	string authorId = 2;
}
message CreateResponse {
	types.Playlist playlist = 1;
}

message CreateFavoriteRequest{
	string author_id = 1;
}
message CreateFavoriteResponse{
	types.Playlist playlist = 1;
}

message GetByIdRequest{
	string id = 1;
}
message GetByIdResponse{
	types.Playlist playlist = 1;
}

message GetFavoriteRequest{
	string author_id = 1;
}
message GetFavoriteResponse{
	types.Playlist playlist = 1;
}

message GetListByAuthorIdRequest{
	string author_id = 1;
}
message GetListByAuthorIdResponse{
	repeated types.Playlist playlists = 1;
}

message AddTrackRequest{
	string playlist_id = 1;
	string track_id = 2;
}
message AddTrackResponse{
	types.Playlist playlist = 1;
}

message UpdateRequest{
	string id = 1;
	string name = 2;
}
message UpdateResponse{
	types.Playlist playlist = 1;
}

message DeleteRequest{
	string id = 1;
}
message DeleteResponse {
	bool is_success = 1;
}

message SearchRequest {
	string pattern = 1;
	int32 page_size = 2;
	int32 page_num = 3;
}
message SearchResponse {
	string pattern = 1;
	int32 page_size = 2;
	int32 page_num = 3;
	repeated types.Playlist playlists = 4;
}

message GetLatestPlaylistsRequest {
	int32 count = 1;
}
message GetLatestPlaylistsResponse {
	repeated types.Playlist playlists = 1;
}
